assets/css/style.css
/* ... */
#speakers h2 {
  color: #a12b32;
  margin-bottom: 0.5em;
}
#speakers .speaker {
  float: left;
  display: block;
  position: relative;
  margin: 0 3.25em 3em 0;
}
#speakers .speaker:nth-child(2n):after {
  content: "";
  width: 0px;
  height: 0px;
  border-style: solid;
  border-width: 0 3.25em 3.25em 0;
  border-color: transparent #FFFFFF transparent transparent;
  display: block;
  position: absolute;
  top: 0;
  right: 0;
}
#speakers .speaker:nth-child(2n+1):after {
  content: "";
  width: 0px;
  height: 0px;
  border-style: solid;
  border-width: 3.25em 3.25em 0 0 ;
  border-color: #FFFFFF transparent  transparent transparent ;
  display: block;
  position: absolute;
  top: 0;
  left: 0;
}
#speakers .speaker img {
  width: 12.5em;
  margin-bottom: 0.625em;
}
#speakers .speaker a,
#speakers .speaker img,
#speakers .speaker span {
  text-decoration: none;
  display: block;
}
#speakers .speaker.no-margin {
  margin-right: 0;
}
.imagereplace {
  text-indent: 100%;
  white-space: nowrap;
  overflow: hidden;
  display: block;
}
#sponsors p {
  margin: 1em 0 1em 0;
}
#sponsors h2 {
  color: #a12b32;
  margin-bottom: 0.5em;
}
#sponsors h4 {
  margin: 1em 0 0.5em 0;
}
#sponsors #josh_software {
  background: url("/images/sponsors/josh.png") no-repeat;
  width: 216px;
}
#sponsors #maven_hive {
  background: url("/images/sponsors/maven_hive.png") no-repeat;
  width: 80px;
}
#sponsors #code_brahma {
  background: url("/images/sponsors/code_brahma.png") no-repeat;
  width: 254px;
}
#sponsors #good_work_labs {
  background: url("/images/sponsors/good_work_labs.png") no-repeat;
  width: 198px;
}
#sponsors #parami_soft {
  background: url("/images/sponsors/parami_soft.png") no-repeat;
  width: 231px;
}
#sponsors .becomeone {
  background: url("/images/become_sponsor.png") no-repeat;
  width: 80px;
  background-position: 0px 0px;
}
#sponsors .becomeone:hover {
  background-position: 0px -60px;
}
#sponsors #nilenso {
  background: url("/images/sponsors/nilenso.png") no-repeat;
  width: 50px;
}
#sponsors ul {
  margin: 0;
  border-bottom: 1px #aaa solid;
}
#sponsors li {
  display: inline-block;
  padding: 1em 0 2em 0;
}
#sponsors a {
  height: 60px;
}
#sponsors li > a {
  display: inline-block;
  min-width: 30%;
}
#sponsors li > p {
  display: inline-block;
  max-width: 67%;
  margin-left: 1em;
}
#charts > section {
  height: 400px;
  width: 100%;
  margin: 3em 0;
}
/* Media Queries
-------------------------------------------------------------------------------*/
@media only screen and (max-width: 1200px) {
  h1 {
    font-size: 2.625em;
  }
  .speakers {
    max-width: 45em;
  }
  .speakers .speaker img {
    width: 10.25em;
  }
  #main {
    padding: 2.5em 1em;
  }
}
@media only screen and (max-width: 1100px) {
  #sponsors li > a {
    display: block;
  }
  #sponsors li > p {
    display: block;
    max-width: 100%;
    margin-left: 0;
  }
}
/* Tablet devices vertical */
@media only screen and (max-width: 850px) {
  h1 {
    font-size: 2em;
  }
  h2 {
    font-size: 1.8em;
    margin-bottom: 0.5em;
  }
  h3 {
    font-size: 1.3em;
  }
  #sidebar {
    width: 11em;
    padding: 2.5em 1.875em 0;
  }
  #main {
    padding: 2.5em 1em;
    margin-left: 15.5em;
  }
  #sponsors li {
    display: block;
  }
  #sponsors li > a {
    display: block;
  }
  #sponsors li > p {
    display: block;
  }
  .speakers .speaker {
    margin: 0 2.5em 1.5em 0;
  }
  .speakers .speaker img {
    width: 8.2em;
  }
}
/* Mobile devices vertical */
@media only screen and (max-width: 640px) {
  #sidebar {
    float: none;
    width: 100%;
    height: auto;
    position: relative;
    text-align: center;
    padding: 2.5em 0 1.2em;
  }
  nav ul li a:hover {
    padding-left: 0;
  }
  #main {
    float: none;
    width: 90%;
    padding: 2.5em 5% 0;
    margin-left: 0;
  }
  .entry-title {
    font-size: 2.375em;
  }
  #respond #respond input[type="text"] {
    width: 100%;
  }
}
@media only screen and (max-width: 580px) {
  body {
    font-size: 90%;
  }
}
@media only screen and (max-width: 320px) {
  .speakers .speaker {
    margin: 0px 1.5em 1.5em 0;
  }
}
/* mixins
-------------------------------------------------------------------------------*/
/* required classes
-------------------------------------------------------------------------------*/
#twitter_link a #twitter {
  margin: 5px auto 12px;
  text-indent: -9999px;
  background: url("/images/twitter_logo.png") no-repeat;
  height: 36px;
  max-width: 3em;
  zoom: 0.7;
}
#twitter_link a:hover #twitter {
  margin: 5px auto 0;
  background: url("/images/twitter_logo_hover.png") no-repeat;
  height: 3.0em;
  max-width: 4em;
}
#emailandlanyrd {
  margin-top: 1em;
}
#emailandlanyrd a {
  margin: 10px 5px;
  text-indent: -9999px;
  width: 32px;
  height: 32px;
  font-size: 32px;
  display: inline-block;
}
#emailandlanyrd a:nth-child(1) {
  background: transparent url("/images/email-32.png") no-repeat;
}
#emailandlanyrd a:nth-child(1):hover {
  background: transparent url("/images/email-32-hover.png") no-repeat;
}
#emailandlanyrd a:nth-child(2) {
  background: transparent url("/images/lanyrd-32.png") no-repeat;
}
#emailandlanyrd a:nth-child(2):hover {
  background: transparent url("/images/lanyrd-32-hover.png") no-repeat;
}
#emailandlanyrd a:nth-child(3) {
  background: transparent url("/images/gh-32.png") no-repeat;
}
#emailandlanyrd a:nth-child(3):hover {
  background: transparent url("/images/gh-32-hover.png") no-repeat;
}
#hotel_link:after {
  content: "➚";
  /* Unicode: U+279A, UTF-8: E2 9E 9A */

}

